@@ -16,11 +16,31 @@ Tested:
 * Java 6 - GeoServer 2.3.x to GeoServer 2.5.x (Oracle JRE tested)
 * Java 5 - GeoServer 2.2.x and earlier (Sun JRE tested)
 
-For best performance we recommend the use *Oracle JRE 8* (also known as JRE 1.8).
-
 .. Further speed improvements can be released using `Marlin renderer <https://github.com/bourgesl/marlin-renderer>`__ alternate renderer.
 
 As of GeoServer 2.0, a Java Runtime Environment (JRE) is sufficient to run GeoServer.  GeoServer no longer requires a Java Development Kit (JDK).
+
+Running on Java 17 (experimental!)
+----------------------------------
+
+GeoServer 2.21.x is compatible with Java 17, but requires extra care for running in some environments.
+
+Deployment on Tomcat 9.0.55 has been tested with success.
+
+The "bin" packaging can work too, but requires turning off the Marlin rasterizer integration. 
+This can be done by modifying the scripts, or by simply removing the Marlin jars:
+
+```
+rm webapps/geoserver/WEB-INF/lib/marlin-0.9.3.jar
+```
+
+GeoServer code depends on a variety of libraries trying to access the JDK internals. As reported above,
+it does not seem to matter when running as a web application. However, in case of need, here is
+the full list of opens used by the build process:
+
+```
+--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED  --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+```
 
 Running on Java 11
 ------------------
